<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>occupancy_map_visualizer</name>
  <version>1.0.0</version>
  <description>The occupancy_map_visualizer package</description>

  <maintainer email="youngsun.kwon@kaist.ac.kr">Youngsun Kwon</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/occupancy_grid_visualizer</url> -->

  <author email="youngsun.kwon@kaist.ac.kr">Youngsun Kwon</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
